Correct error in last commit.

--- a/models/openEHR/Release-1.0.2/UML/HTML/index.html
+++ b/models/openEHR/Release-1.0.2/UML/HTML/index.html
@@ -1,5 +1,5 @@
 <html>
-	<head><META http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<head>
 		<title>The openEHR 1.0.2 UML Model</title>
 		<meta http-equiv="REFRESH" content="0:http://www.openehr.org/wiki/display/spec/openEHR+1.0.2+UML+resources">
 	</head>
